// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`polkadotXcm > limitedReserveTransferAssets > here > should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveTransferAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
}
`;

exports[`polkadotXcm > limitedReserveTransferAssets > here > should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": "Here",
            "parents": 0,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;

exports[`polkadotXcm > limitedReserveTransferAssets > parachain > should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveTransferAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
}
`;

exports[`polkadotXcm > limitedReserveTransferAssets > parachain > should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 2032,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountId32": {
            "id": "0x18e6c7ad45fbab18778710642072fdd057470b76d4d568b44dea6accd5b0c423",
            "network": null,
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "PalletInstance": 10,
                },
                {
                  "GeneralIndex": "USDT",
                },
              ],
            },
            "parents": 0,
          },
        },
      },
      {
        "fun": {
          "Fungible": 5000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "PalletInstance": 18,
                },
                {
                  "GeneralIndex": "RMRK",
                },
              ],
            },
            "parents": 0,
          },
        },
      },
    ],
  },
  1,
  "Unlimited",
]
`;

exports[`polkadotXcm > limitedReserveTransferAssets > x1 > should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveTransferAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
}
`;

exports[`polkadotXcm > limitedReserveTransferAssets > x1 > should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X1": {
                "PalletInstance": 10,
              },
            },
            "parents": 0,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;

exports[`polkadotXcm > limitedReserveTransferAssets > x2 > different assets > should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveTransferAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
}
`;

exports[`polkadotXcm > limitedReserveTransferAssets > x2 > different assets > should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "PalletInstance": 10,
                },
                {
                  "GeneralIndex": "USDT",
                },
              ],
            },
            "parents": 0,
          },
        },
      },
      {
        "fun": {
          "Fungible": 5000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "PalletInstance": 18,
                },
                {
                  "GeneralIndex": "RMRK",
                },
              ],
            },
            "parents": 0,
          },
        },
      },
    ],
  },
  1,
  "Unlimited",
]
`;

exports[`polkadotXcm > limitedReserveTransferAssets > x2 > the same asset > should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveTransferAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
}
`;

exports[`polkadotXcm > limitedReserveTransferAssets > x2 > the same asset > should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "PalletInstance": 10,
                },
                {
                  "GeneralIndex": "USDT",
                },
              ],
            },
            "parents": 0,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;

exports[`polkadotXcm > limitedReserveWithdrawAssets > parachain > should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveWithdrawAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
}
`;

exports[`polkadotXcm > limitedReserveWithdrawAssets > parachain > should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 2032,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountId32": {
            "id": "0x18e6c7ad45fbab18778710642072fdd057470b76d4d568b44dea6accd5b0c423",
            "network": null,
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "Parachain": 2032,
                },
                {
                  "PalletInstance": 10,
                },
              ],
            },
            "parents": 1,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;

exports[`polkadotXcm > limitedReserveWithdrawAssets > x2 > should be correct config 1`] = `
ExtrinsicConfig {
  "func": "limitedReserveWithdrawAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
}
`;

exports[`polkadotXcm > limitedReserveWithdrawAssets > x2 > should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 1000,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountKey20": {
            "key": "0xeF46c7649270C912704fB09B75097f6E32208b85",
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "Parachain": 1000,
                },
                {
                  "PalletInstance": 10,
                },
              ],
            },
            "parents": 1,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;

exports[`polkadotXcm > transferAssets > X2AndFeeHere > should be correct config 1`] = `
ExtrinsicConfig {
  "func": "transferAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
}
`;

exports[`polkadotXcm > transferAssets > X2AndFeeHere > should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 2032,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountId32": {
            "id": "0x18e6c7ad45fbab18778710642072fdd057470b76d4d568b44dea6accd5b0c423",
            "network": null,
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "PalletInstance": 10,
                },
                {
                  "GeneralIndex": "USDT",
                },
              ],
            },
            "parents": 0,
          },
        },
      },
      {
        "fun": {
          "Fungible": 5000000000n,
        },
        "id": {
          "Concrete": {
            "interior": "Here",
            "parents": 1,
          },
        },
      },
    ],
  },
  1,
  "Unlimited",
]
`;

exports[`polkadotXcm > transferAssets > here > should be correct config 1`] = `
ExtrinsicConfig {
  "func": "transferAssets",
  "getArgs": [Function],
  "module": "polkadotXcm",
}
`;

exports[`polkadotXcm > transferAssets > here > should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": {
          "Parachain": 2032,
        },
      },
      "parents": 1,
    },
  },
  {
    "V1": {
      "interior": {
        "X1": {
          "AccountId32": {
            "id": "0x18e6c7ad45fbab18778710642072fdd057470b76d4d568b44dea6accd5b0c423",
            "network": null,
          },
        },
      },
      "parents": 0,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "Fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": "Here",
            "parents": 1,
          },
        },
      },
    ],
  },
  0,
  "Unlimited",
]
`;

exports[`polkadotXcm > transferAssetsUsingTypeAndThen > globalConsensusEthereum > should be correct config 1`] = `
ExtrinsicConfig {
  "func": "transferAssetsUsingTypeAndThen",
  "getArgs": [Function],
  "module": "polkadotXcm",
}
`;

exports[`polkadotXcm > transferAssetsUsingTypeAndThen > globalConsensusEthereum > should get correct arguments 1`] = `
[
  {
    "V1": {
      "interior": {
        "X1": [
          {
            "Parachain": 2032,
          },
        ],
      },
      "parents": 1,
    },
  },
  {
    "V1": [
      {
        "fun": {
          "fungible": 99000000000n,
        },
        "id": {
          "Concrete": {
            "interior": {
              "X2": [
                {
                  "globalConsensus": {
                    "Ethereum": {
                      "ChainId": 1,
                    },
                  },
                },
                {
                  "AccountKey20": {
                    "key": "0x98891e5FD24Ef33A488A47101F65D212Ff6E650E",
                  },
                },
              ],
            },
            "parents": 2,
          },
        },
      },
    ],
  },
  "LocalReserve",
  {
    "V1": {
      "Concrete": {
        "interior": {
          "X2": [
            {
              "globalConsensus": {
                "Ethereum": {
                  "ChainId": 1,
                },
              },
            },
            {
              "AccountKey20": {
                "key": "0x98891e5FD24Ef33A488A47101F65D212Ff6E650E",
              },
            },
          ],
        },
        "parents": 2,
      },
    },
  },
  "LocalReserve",
  {
    "V1": [
      {
        "DepositAsset": {
          "assets": {
            "Wild": {
              "AllCounted": 1,
            },
          },
          "beneficiary": {
            "interior": {
              "X1": {
                "AccountId32": {
                  "id": "0x18e6c7ad45fbab18778710642072fdd057470b76d4d568b44dea6accd5b0c423",
                  "network": null,
                },
              },
            },
            "parents": 0,
          },
        },
      },
    ],
  },
  "Unlimited",
]
`;
